# bash-connect4

./: .dockerignore  .gitignore  Dockerfile  README.md  config.sh  core.sh  fly.toml  package-lock.json  start.sh
lib/evaluation/: Cargo.toml
lib/evaluation/src/: main.rs
pages/: conns.sh  index.sh  leaderboard.sh  oauth.sh  reset.sh  twitch_oauth.sh
pages/board/: [team].sh
pages/drop/[team]/: [col].sh
pages/join/: [team].sh
pages/sse/: [team].sh
pages/team/: [team].sh
static/: style.css
